--- a/public/client-dashboard.html
+++ b/public/client-dashboard.html
@@ -1,74 +1,256 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Client Dashboard</title>
-    <meta name="google-adsense-account" content="ca-pub-7210368865406744">
-    <link rel="icon" type="image/x-icon" href="https://media.istockphoto.com/id/1399229336/vector/homeless-man-on-street-businessmen.jpg?s=612x612&w=0&k=20&c=uL7nSHRWT-K160Nfh8WgRGjAIbiUwPlGCzec0zVYHPw=">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script>
-        function init(){
-            let activeUser= localStorage.getItem("activeUser")
-            document.getElementById("user").innerHTML=activeUser;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Client Dashboard</title>
+  <meta name="google-adsense-account" content="ca-pub-7210368865406744" />
+  <link rel="icon" type="image/x-icon"
+    href="https://media.istockphoto.com/id/1399229336/vector/homeless-man-on-street-businessmen.jpg?s=612x612&w=0&k=20&c=uL7nSHRWT-K160Nfh8WgRGjAIbiUwPlGCzec0zVYHPw=" />
 
-        function doLogout(){
-            localStorage.removeItem("activeUser");
-            alert("logged Out");
-            window.location.href="/";
-        }
-    </script>
+  <!-- Google Fonts: Poppins + Roboto -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&family=Roboto&display=swap" rel="stylesheet" />
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+  <style>
+    /* Base font & reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    body {
+      background: linear-gradient(135deg, #667eea, #764ba2);
+      min-height: 100vh;
+      padding: 40px 20px;
+      color: #fff;
+      overflow-x: hidden;
+      animation: fadeIn 1s ease forwards;
+    }
+
+    /* Fade in animation */
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(15px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Header styling */
+    .p-3.bg-dark {
+      background-color: transparent !important;
+      box-shadow: none !important;
+      margin-bottom: 50px;
+      user-select: none;
+    }
+
+    .p-3.bg-dark h5 {
+      font-weight: 700;
+      font-size: 1.8rem;
+      color: #f7f7f7;
+      letter-spacing: 0.1em;
+      text-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
+    }
+
+    /* Container & form */
+    .container.form {
+      max-width: 1200px;
+    }
+
+    /* Welcome message */
+    h2.text-warning {
+      color: #ffdd57 !important;
+      font-weight: 600;
+      text-align: center;
+      margin-bottom: 45px;
+      font-family: 'Roboto', sans-serif;
+      font-size: 2.6rem;
+      letter-spacing: 0.05em;
+      text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
+    }
+
+    h2 span#user {
+      color: #fff;
+      font-weight: 700;
+      border-bottom: 2px solid #ffdd57;
+      padding-bottom: 2px;
+    }
+
+    /* Card styling */
+    .card {
+      border-radius: 20px;
+      overflow: hidden;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.25);
+      background: rgba(255, 255, 255, 0.12);
+      backdrop-filter: blur(10px);
+      transition: transform 0.35s ease, box-shadow 0.35s ease;
+      cursor: pointer;
+      color: #fff;
+      user-select: none;
+    }
+
+    .card:hover {
+      transform: translateY(-15px) scale(1.05);
+      box-shadow: 0 12px 35px rgba(255, 255, 255, 0.4);
+      background: rgba(255, 255, 255, 0.25);
+    }
+
+    /* Card image */
+    .card-img-top {
+      height: 280px;
+      object-fit: cover;
+      border-radius: 20px 20px 0 0;
+      transition: transform 0.35s ease;
+    }
+
+    .card:hover .card-img-top {
+      transform: scale(1.1);
+      filter: brightness(1.05);
+    }
+
+    /* Card body */
+    .card-body {
+      padding: 25px 15px;
+      display: flex;
+      justify-content: center;
+      background: transparent;
+    }
+
+    /* Buttons */
+    .btn-dark {
+      background: #ffdd57;
+      color: #3d2f00;
+      font-weight: 700;
+      border-radius: 30px;
+      padding: 12px 40px;
+      box-shadow: 0 4px 10px rgba(255, 221, 87, 0.4);
+      transition: background-color 0.4s ease, box-shadow 0.4s ease, color 0.4s ease;
+      letter-spacing: 0.05em;
+      text-transform: uppercase;
+    }
+
+    .btn-dark:hover,
+    .btn-dark:focus {
+      background-color: #ffd633;
+      box-shadow: 0 6px 15px rgba(255, 214, 51, 0.6);
+      color: #3d2f00;
+      text-decoration: none;
+    }
+
+    /* Responsive spacing */
+    .row.justify-content-center {
+      gap: 30px;
+    }
+
+    /* Small screens adjustments */
+    @media (max-width: 768px) {
+      .card-img-top {
+        height: 220px;
+      }
+
+      h2.text-warning {
+        font-size: 2rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      body {
+        padding: 30px 10px;
+      }
+
+      .btn-dark {
+        padding: 10px 30px;
+        font-size: 0.9rem;
+      }
+    }
+  </style>
+
+  <script>
+    function init() {
+      let activeUser = localStorage.getItem("activeUser") || "Guest";
+      typeEffect(activeUser, document.getElementById("user"));
+    }
+
+    // Typing effect for welcome username
+    function typeEffect(text, element, i = 0) {
+      if (i < text.length) {
+        element.innerHTML += text.charAt(i);
+        setTimeout(() => typeEffect(text, element, i + 1), 100);
+      }
+    }
+
+    function doLogout() {
+      localStorage.removeItem("activeUser");
+      alert("Logged Out");
+      window.location.href = "/";
+    }
+  </script>
 </head>
+
 <body onload="init()">
-    <div class="p-3 mb-3 bg-dark">
-        <h5 class="text-center text-white">www.panhadlers.com</h5>
-    </div>
-    <div class="container form">
-        <h2 class="text-center text-warning">Welcome Client: <span id="user"></span></h2>
-        <div class="row justify-content-center">
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
-                <div class="card shadow">
-                    <img src="https://img.freepik.com/free-vector/blue-circle-with-white-user_78370-4707.jpg" class="card-img-top" alt="Profile">
-                    <div class="card-body d-flex justify-content-center">
-                        <a href="client-kyc.html" class="btn btn-dark px-5">Profile</a>
-                    </div>
-                </div>
-            </div>
+  <div class="p-3 mb-3 bg-dark">
+    <h5 class="text-center">www.panhadlers.com</h5>
+  </div>
 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
-                <div class="card shadow">
-                    <img src="https://icon-library.com/images/jobs-icon-png/jobs-icon-png-18.jpg" class="card-img-top" alt="Post Job">
-                    <div class="card-body d-flex justify-content-center">
-                        <a href="Post-job.html" class="btn btn-dark px-5">Post Job</a>
-                    </div>
-                </div>
-            </div>
+  <div class="container form">
+    <h2 class="text-warning">Welcome Client: <span id="user"></span></h2>
 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
-                <div class="card shadow">
-                    <img src="https://d2s82a7atsifww.cloudfront.net/articles/content/807697e9c67d745079fe9475a87dce4c_officemanagerH.png" class="card-img-top" alt="Job Manager">
-                    <div class="card-body d-flex justify-content-center">
-                        <a href="Job-manager.html" class="btn btn-dark px-5">Job Manager</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
-                <div class="card shadow">
-                    <img src="https://cdn-icons-png.flaticon.com/512/3240/3240728.png" class="card-img-top" alt="Logout">
-                    <div class="card-body d-flex justify-content-center">
-                        <!-- <button type="button" formaction="/logout" class="btn btn-dark px-5">Logout</button> -->
-                       
-                            <a href="#" onclick="doLogout();" class="btn btn-dark px-5">Logout</a>
-                       
-                    </div>
-                </div>
-            </div>
+    <div class="row justify-content-center">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="card shadow">
+          <img src="https://img.freepik.com/free-vector/blue-circle-with-white-user_78370-4707.jpg" class="card-img-top"
+            alt="Profile" />
+          <div class="card-body d-flex justify-content-center">
+            <a href="client-kyc.html" class="btn btn-dark px-5">Profile</a>
+          </div>
         </div>
+      </div>
+
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="card shadow">
+          <img src="https://icon-library.com/images/jobs-icon-png/jobs-icon-png-18.jpg" class="card-img-top" alt="Post Job" />
+          <div class="card-body d-flex justify-content-center">
+            <a href="Post-job.html" class="btn btn-dark px-5">Post Job</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="card shadow">
+          <img src="https://d2s82a7atsifww.cloudfront.net/articles/content/807697e9c67d745079fe9475a87dce4c_officemanagerH.png"
+            class="card-img-top" alt="Job Manager" />
+          <div class="card-body d-flex justify-content-center">
+            <a href="Job-manager.html" class="btn btn-dark px-5">Job Manager</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="card shadow">
+          <img src="https://cdn-icons-png.flaticon.com/512/3240/3240728.png" class="card-img-top" alt="Logout" />
+          <div class="card-body d-flex justify-content-center">
+            <a href="#" onclick="doLogout();" class="btn btn-dark px-5">Logout</a>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </body>
+
 </html>
