--- a/public/client-kyc.html
+++ b/public/client-kyc.html
@@ -1,134 +1,287 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Client</title>
-    <meta name="google-adsense-account" content="ca-pub-7210368865406744">
-    <link rel="icon" type="image/x-icon" href="https://media.istockphoto.com/id/1399229336/vector/homeless-man-on-street-businessmen.jpg?s=612x612&w=0&k=20&c=uL7nSHRWT-K160Nfh8WgRGjAIbiUwPlGCzec0zVYHPw=">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script>
-        function init(){
-            let activeUser= localStorage.getItem("activeUser")
-            document.getElementById("txtEmail").value=activeUser;
-        }
-    </script>
-    <script>
-        $(document).ready(function () {
-            $("#fetch").click(function () {
-                let obj = {
-                    type: "get",
-                    url: "/fetch-one",
-                    data: {
-                        txtEmail: $("#txtEmail").val(),
-                    }
-                }
-                //sending AJAX Call
-                $.ajax(obj)
-                    .then(function (responseInJsonAry) {
-                        if (responseInJsonAry.length == 0)
-                            alert("Invalid Email Id /Password");
-                        else {
-                            $("#txtName").val(responseInJsonAry[0].name);
-                            $("#txtContact").val(responseInJsonAry[0].contact.substr(0, 10));
-                            $("#txtAddress").val(responseInJsonAry[0].address);
-                            $("#txtCity").val(responseInJsonAry[0].city);
-                            $("#firm").val(responseInJsonAry[0].business);
-                            $("#business").val(responseInJsonAry[0].bprofile);
-                            $("#idtype").val(responseInJsonAry[0].idproof);
-                            $("#idnumber").val(responseInJsonAry[0].idnumber);
-                            $("#info").val(responseInJsonAry[0].info);
-                        }
-                    }).fail(function (err) {
-                        alert(err.message)
-                    })
-            })
-        });
-    </script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Client</title>
+  <meta name="google-adsense-account" content="ca-pub-7210368865406744" />
+  <link rel="icon" type="image/x-icon"
+    href="https://media.istockphoto.com/id/1399229336/vector/homeless-man-on-street-businessmen.jpg?s=612x612&w=0&k=20&c=uL7nSHRWT-K160Nfh8WgRGjAIbiUwPlGCzec0zVYHPw=" />
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+  <style>
+    /* Dark Theme Base */
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #121212;
+      color: #e0e0e0;
+      min-height: 100vh;
+      padding: 30px 15px;
+      animation: fadeIn 1s ease forwards;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Header */
+    .p-2.bg-dark {
+      background-color: #1f1f1f !important;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.8);
+      margin-bottom: 40px;
+      user-select: none;
+    }
+
+    .p-2.bg-dark h5 {
+      color: #bb86fc;
+      font-weight: 600;
+      font-size: 1.5rem;
+      text-align: center;
+      letter-spacing: 0.08em;
+      text-shadow: 0 0 8px #bb86fc;
+    }
+
+    /* Form container */
+    form.border.border-primary {
+      background: #1e1e1e;
+      border-radius: 20px;
+      padding: 3rem 2.5rem;
+      box-shadow: 0 12px 35px rgba(187, 134, 252, 0.4);
+      border: 1px solid #bb86fc;
+    }
+
+    label {
+      font-weight: 600;
+      color: #d0bcff;
+    }
+
+    /* Inputs */
+    input.form-control,
+    select.form-select,
+    textarea.form-control {
+      background-color: #2a2a2a;
+      border: 1px solid #444;
+      color: #e0e0e0;
+      font-weight: 500;
+      border-radius: 8px;
+      transition: border-color 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    input.form-control:focus,
+    select.form-select:focus,
+    textarea.form-control:focus {
+      border-color: #bb86fc;
+      box-shadow: 0 0 8px 2px #bb86fc;
+      outline: none;
+      background-color: #333;
+      color: #fff;
+    }
+
+    input[readonly] {
+      background-color: #252525;
+      color: #999;
+      cursor: not-allowed;
+      border-color: #555;
+    }
+
+    /* Buttons */
+    .btn-dark {
+      background: #bb86fc;
+      border: none;
+      font-weight: 600;
+      padding: 10px 35px;
+      border-radius: 30px;
+      color: #1a0033;
+      box-shadow: 0 4px 12px rgba(187, 134, 252, 0.6);
+      transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+      text-transform: uppercase;
+      letter-spacing: 0.06em;
+    }
+
+    .btn-dark:hover,
+    .btn-dark:focus {
+      background-color: #9a63e9;
+      color: #fff;
+      box-shadow: 0 6px 18px rgba(154, 99, 233, 0.8);
+      outline: none;
+    }
+
+    .btn-secondary {
+      background-color: #3700b3;
+      border: none;
+      font-weight: 600;
+      padding: 10px 35px;
+      border-radius: 30px;
+      color: #d0bcff;
+      box-shadow: 0 4px 12px rgba(55, 0, 179, 0.6);
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+      text-transform: uppercase;
+      letter-spacing: 0.06em;
+    }
+
+    .btn-secondary:hover,
+    .btn-secondary:focus {
+      background-color: #260078;
+      box-shadow: 0 6px 18px rgba(38, 0, 120, 0.8);
+      outline: none;
+      color: #fff;
+    }
+
+    /* Responsive tweaks */
+    @media (max-width: 768px) {
+      form.border.border-primary {
+        padding: 2.2rem 1.5rem;
+      }
+
+      .btn-dark,
+      .btn-secondary {
+        padding: 10px 25px;
+        font-size: 0.9rem;
+      }
+    }
+  </style>
+
+  <script>
+    function init() {
+      let activeUser = localStorage.getItem("activeUser");
+      if (activeUser) {
+        document.getElementById("txtEmail").value = activeUser;
+      }
+    }
+  </script>
+
+  <script>
+    $(document).ready(function () {
+      $("#fetch").click(function () {
+        let obj = {
+          type: "get",
+          url: "/fetch-one",
+          data: {
+            txtEmail: $("#txtEmail").val(),
+          },
+        };
+        $.ajax(obj)
+          .then(function (responseInJsonAry) {
+            if (responseInJsonAry.length == 0) alert("Invalid Email Id /Password");
+            else {
+              $("#txtName").val(responseInJsonAry[0].name);
+              $("#txtContact").val(responseInJsonAry[0].contact.substr(0, 10));
+              $("#txtAddress").val(responseInJsonAry[0].address);
+              $("#txtCity").val(responseInJsonAry[0].city);
+              $("#firm").val(responseInJsonAry[0].business);
+              $("#business").val(responseInJsonAry[0].bprofile);
+              $("#idtype").val(responseInJsonAry[0].idproof);
+              $("#idnumber").val(responseInJsonAry[0].idnumber);
+              $("#info").val(responseInJsonAry[0].info);
+            }
+          })
+          .fail(function (err) {
+            alert(err.message);
+          });
+      });
+    });
+  </script>
 </head>
 
 <body onload="init();">
-    <div class="p-2 bg-dark">
-        <h5 class="text-center text-white">www.panhadlers.com</h5>
-    </div>
+  <div class="p-2 bg-dark">
+    <h5>www.panhadlers.com</h5>
+  </div>
 
-    <div class="container my-5">
-        <form class="border border-primary p-5 rounded shadow" method="post" action="/client-kyc">
-            <div class="row mb-4">
-                <div class="col-md-10">
-                    <label for="txtEmail" class="form-label">Client ID</label>
-                    <input type="email" class="form-control" id="txtEmail" name="txtEmail" readonly>
-                </div>
-                <div class="col-md-2 d-flex align-items-end">
-                    <input type="button" class="btn btn-dark" value="Fetch" id="fetch">
-                </div>
-            </div>
+  <div class="container my-5">
+    <form class="border border-primary p-5 rounded shadow" method="post" action="/client-kyc">
+      <div class="row mb-4">
+        <div class="col-md-10">
+          <label for="txtEmail" class="form-label">Client ID</label>
+          <input type="email" class="form-control" id="txtEmail" name="txtEmail" readonly />
+        </div>
+        <div class="col-md-2 d-flex align-items-end">
+          <input type="button" class="btn btn-dark w-100" value="Fetch" id="fetch" />
+        </div>
+      </div>
 
-            <div class="row mb-4">
-                <div class="col-md-5">
-                    <label for="txtName" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="txtName" name="txtName" required>
-                </div>
-                <div class="col-md-5">
-                    <label for="txtContact" class="form-label">Contact</label>
-                    <input type="number" class="form-control" id="txtContact" name="txtContact" required>
-                </div>
-            </div>
+      <div class="row mb-4">
+        <div class="col-md-5">
+          <label for="txtName" class="form-label">Name</label>
+          <input type="text" class="form-control" id="txtName" name="txtName" required />
+        </div>
+        <div class="col-md-5">
+          <label for="txtContact" class="form-label">Contact</label>
+          <input type="number" class="form-control" id="txtContact" name="txtContact" required />
+        </div>
+      </div>
 
-            <div class="row mb-4">
-                <div class="col-md-5">
-                    <label for="firm" class="form-label">Firm/Business</label>
-                    <input type="text" class="form-control" id="firm" name="firm" required>
-                </div>
-                <div class="col-md-5">
-                    <label for="business" class="form-label">Business Profile</label>
-                    <input type="text" class="form-control" id="business" name="business" required>
-                </div>
-            </div>
+      <div class="row mb-4">
+        <div class="col-md-5">
+          <label for="firm" class="form-label">Firm/Business</label>
+          <input type="text" class="form-control" id="firm" name="firm" required />
+        </div>
+        <div class="col-md-5">
+          <label for="business" class="form-label">Business Profile</label>
+          <input type="text" class="form-control" id="business" name="business" required />
+        </div>
+      </div>
 
-            <div class="row mb-4">
-                <div class="col-md-5">
-                    <label for="txtAddress" class="form-label">Address</label>
-                    <input type="text" class="form-control" id="txtAddress" name="txtAddress" required>
-                </div>
-                <div class="col-md-5">
-                    <label for="txtCity" class="form-label">City</label>
-                    <input type="text" class="form-control" id="txtCity" name="txtCity" required>
-                </div>
-            </div>
+      <div class="row mb-4">
+        <div class="col-md-5">
+          <label for="txtAddress" class="form-label">Address</label>
+          <input type="text" class="form-control" id="txtAddress" name="txtAddress" required />
+        </div>
+        <div class="col-md-5">
+          <label for="txtCity" class="form-label">City</label>
+          <input type="text" class="form-control" id="txtCity" name="txtCity" required />
+        </div>
+      </div>
 
-            <div class="row mb-4">
-                <div class="col-md-5">
-                    <label for="idtype" class="form-label">Select ID Type:</label>
-                    <select name="idtype" id="idtype" class="form-select" required>
-                        <option value="none">Select</option>
-                        <option value="Adhaar Card">Adhaar Card</option>
-                        <option value="Pan Card">Pan Card</option>
-                        <option value="Driving License">Driving License</option>
-                        <option value="Voter ID">Voter ID</option>
-                        <option value="Passport">Passport</option>
-                    </select>
-                </div>
-                <div class="col-md-5">
-                    <label for="idnumber" class="form-label">ID Proof Number</label>
-                    <input type="text" class="form-control" id="idnumber" name="idnumber" required>
-                </div>
-            </div>
+      <div class="row mb-4">
+        <div class="col-md-5">
+          <label for="idtype" class="form-label">Select ID Type:</label>
+          <select name="idtype" id="idtype" class="form-select" required>
+            <option value="none">Select</option>
+            <option value="Adhaar Card">Adhaar Card</option>
+            <option value="Pan Card">Pan Card</option>
+            <option value="Driving License">Driving License</option>
+            <option value="Voter ID">Voter ID</option>
+            <option value="Passport">Passport</option>
+          </select>
+        </div>
+        <div class="col-md-5">
+          <label for="idnumber" class="form-label">ID Proof Number</label>
+          <input type="text" class="form-control" id="idnumber" name="idnumber" required />
+        </div>
+      </div>
 
-            <div class="mb-4">
-                <label for="info" class="form-label">Other Info</label>
-                <textarea name="info" id="info" class="form-control" rows="3"></textarea>
-            </div>
+      <div class="mb-4">
+        <label for="info" class="form-label">Other Info</label>
+        <textarea name="info" id="info" class="form-control" rows="3"></textarea>
+      </div>
 
-            <div class="d-flex justify-content-center">
-                <button type="submit" class="btn btn-dark mx-2 text-light fw-bold">Register</button>
-                <button type="submit" class="btn btn-secondary mx-2 text-light fw-bold" formaction="/update-data">Update</button>
-            </div>
-        </form>
-    </div>
+      <div class="d-flex justify-content-center">
+        <button type="submit" class="btn btn-dark mx-2 text-light fw-bold">Register</button>
+        <button type="submit" class="btn btn-secondary mx-2 text-light fw-bold" formaction="/update-data">Update</button>
+      </div>
+    </form>
+  </div>
 </body>
 
 </html>
